# guest-components

./: Cargo.toml  Dockerfile.aa  Dockerfile.cdh  Makefile  README.md  REPRODUCIBLE_BUILD.md  aa-start.sh  build_deb.sh  trustiflux.spec
.github/scripts/: generate_rpm_per_file_provenance.sh
.github/workflows/: aa_basic.yml  build_rpm.yml  cdh_basic.yml  initdata-processor-basic.yml
APPLICATION/attestation-agent/: buildspec.yml
APPLICATION/confidential-data-hub/: buildspec.yml
APPLICATION/trustiflux-api-server/: buildspec.yml
api-server-rest/: Cargo.toml  README.md  build.rs
api-server-rest/openapi/: api.json
api-server-rest/src/: aa.rs  cdh.rs  main.rs  router.rs
attestation-agent/agent-go/: README.md  agent.go  agent_test.go  go.mod  go.sum
attestation-agent/agent-go/config/: aakbcparams.go  aakbcparams_test.go  config.go  config_test.go
attestation-agent/attestation-agent/: Cargo.toml  README_aa_instance.md  build.rs  config.example.json  config.example.toml
attestation-agent/attester/: Cargo.toml
attestation-agent/attester-go/: README.md  attester.go  attester_test.go  go.mod  go.sum
attestation-agent/coco_keyprovider/: Cargo.toml
attestation-agent/kbc/: Cargo.toml
attestation-agent/kbs_protocol/: Cargo.toml
attestation-agent/protos/: attestation-agent.proto
confidential-data-hub/: example.config.toml
confidential-data-hub/hub/: Cargo.toml  build.rs
image-rs/: Cargo.toml
image-rs/src/: config.rs
initdata-processor/: Cargo.toml
initdata-processor/src/: initdata_spec.rs  main.rs
ocicrypt-rs/: Cargo.toml
(+68 files in other folders)
